Migrate MWE (almost entirely) off Guava